--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,9 +140,6 @@ section {
   }
   /* Hero Style End */
 
-  .intro {
-      text-align: center;
-  }
 
   .intro p {
       line-height: 1.7;
@@ -150,21 +147,23 @@ section {
       width: 80%;
       font-size: 20px;
       margin: 0 auto;
+      text-align: center;
       
   }
 
   .steps {
-      text-align: center;
       background: #fce138;
   }
 
   .section-title {
       font-size: 55px;
       color: #024e76;
-      margin-bottom: 35px;
-      padding: 0 100px 20px 100px;
-      display: inline-block;
       border-bottom: 3px solid;
+      padding-bottom: 20px;
+      text-align: center;
+      margin: 0 auto 35px auto;
+      width: 50%;
+
   }
 
   .primary-border {
@@ -200,7 +199,7 @@ section {
   }
 
   .trainers {
-      text-align: center;
+      
   }
 
   .trainer {
@@ -222,14 +221,6 @@ section {
       width: 65%;
   }
 
-  .text-left {
-      text-align: left;
-  }
-
-  .text-right {
-      text-align: right;
-  }
-
   .trainer-bio h3 {
       font-size: 32px;
       margin-bottom: 8px;
@@ -249,8 +240,7 @@ section {
   
   /* REACH OUT STYLES START */
   .contact {
-      background-color: #024e76;
-      text-align: center;
+      background-color: #024e76
   }
 
   .contact h2 {
@@ -288,3 +278,16 @@ section {
   }
 
   /* REACH OUT STYLES END */
+
+  /* UTILITIES */
+  .text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
+  }
